--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Example Portfolio</title>
 </head>
 <body>
-<h1>Hello GitHub.io</h1>
+<h1>Hello GitHub.io and Commit Now</h1>
 </body>
 </html>
